fix(css): align power button by removing redundant style

--- a/config/waybar/style/[Wallust] Box type.css
+++ b/config/waybar/style/[Wallust] Box type.css
@@ -150,10 +150,6 @@ window#waybar.empty #window {
     border-bottom-style: solid;
 }
 
-#custom-power {
-	padding-right: 2px;
-}
-
 /*-----Indicators----*/
 #custom-hypridle.notactive,
 #idle_inhibitor.activated {
